test/spec_vectors/store/fail/module_55.wat
(module (memory 1) (func (i64.store16 (i32.const 0) (f64.const 0))))